laborations/lab2/testsuite/bad/bad114.cc
int main () {
	int x;
	if (3 != true)
		x = 1;
	else {}
	return 0;
}
